--- a/_pages/en.html
+++ b/_pages/en.html
@@ -9,7 +9,7 @@ menuEquipe: Team
 
 capaFrase: Art is in
 rotating: rotatingEN
-capaSlogan: Artist's Vaginas - um experimento com a microbiota íntima
+capaSlogan: Artist's Vaginas - an experiment with the intimate microbiota 
 
 sobreTitulo: ARTIST'S VAGINAS
 sobreConteudo1: What happens when a group of women appropriates of their own intimate microbiota to make art?  
