--- a/_pages/en.html
+++ b/_pages/en.html
@@ -39,8 +39,8 @@ anais2: photographer
 renata1: photographer
 renata2: videomaker
 
-barao1: artista
-barao2: photographer
+carol1: artista
+carol2: photographer
 
 kris1: designer
 kris2: photographer
