--- a/_pages/pt.html
+++ b/_pages/pt.html
@@ -44,8 +44,8 @@ anais2: fotógrafa
 renata1: comunicadora
 renata2: videomaker
 
-barao1: artista
-barao2: fotógrafo
+carol1: artista
+carol2: fotógrafa
 
 kris1: designer
 kris2: fotógrafa
