--- a/_pages/en.html
+++ b/_pages/en.html
@@ -39,7 +39,7 @@ anais2: photographer
 renata1: photographer
 renata2: videomaker
 
-carol1: artista
+carol1: artist
 carol2: photographer
 
 kris1: designer
